<resources>
    <string name="app_name">FDP</string>
    <string name="name">Name</string>
    <string name="farmer_name">Farmer name:</string>
    <string name="national_id">National ID:</string>
    <string name="farmer_age">Farmer age:</string>
    <string name="farmer_education">Farmer education:</string>
    <string name="family_members">Family members:</string>
    <string name="income_other_crops">Income other crops:</string>
    <string name="family_income">Family income:</string>
    <string name="income_loans">Income from loans:</string>
    <string name="cocoa_price_ly">Farm gate Cocoa price last year:</string>
    <string name="living_expenses">Living Expenses:</string>
    <string name="cost_housing">Cost of housing:</string>
    <string name="other_expenses">Other expenses:</string>
    <string name="farm_name">Farm name:</string>
    <string name="farm_village">Farm village:</string>
    <string name="cocoa_area">Cocoa Area (Ha):</string>
    <string name="other_area">Other crops Area (Ha):</string>
    <string name="number_plots">Number of plots:</string>
    <string name="plot_a">Plot A</string>
    <string name="plot_b">Plot B</string>
    <string name="plot_c">Plot C</string>
    <string name="plot_d">Plot D</string>
    <string name="plot_e">Plot E</string>
    <string name="plot_f">Plot F</string>
    <string name="plot_g">Plot G</string>
    <string name="plot_h">Plot H</string>
    <string name="plot_i">Plot I</string>
    <string name="plot_j">Plot J</string>
    <string name="planting_material">Planting Material - Genetic Potential</string>
    <string name="farm_condition">Farm Condition</string>
    <string name="tree_density">Tree Density</string>
    <string name="tree_age">Tree Age</string>
    <string name="tree_health">Tree Health</string>
    <string name="debilitating_disease">Debilitating Disease</string>
    <string name="pruning">Pruning</string>
    <string name="pest_disease">Pest and Disease and Sanitation</string>
    <string name="weeding">Weeding</string>
    <string name="harvesting">Harvesting</string>
    <string name="shade_management">Shade Management</string>
    <string name="soil_condition">Soil Condition</string>
    <string name="organic_matter">Organic Matter</string>
    <string name="fertilizer_formulation">Fertilizer Formulation</string>
    <string name="fertilizer_application">Fertilizer Application</string>
    <string name="plot_area">Plot Area</string>
    <string name="plot_GPS">Plot GPS</string>
    <string name="estimated_yield">Estimated Yield</string>
    <string name="year_1">Year 1</string>
    <string name="year_2">Year 2</string>
    <string name="year_3">Year 3</string>
    <string name="year_4">Year 4</string>
    <string name="year_5">Year 5</string>
    <string name="year_6">Year 6</string>
    <string name="year_7">Year 7</string>
    <string name="year_8">Year 8</string>
    <string name="year_9">Year 9</string>
    <string name="year_10">Year 10</string>
    <string name="replanting">Replanting</string>
    <string name="grafting">Grafting</string>
    <string name="full_fert">Full Fertilization</string>
    <string name="med_fert">Medium Fertilization</string>
    <string name="full_gaps">Full GAPS</string>
    <string name="med_gaps">Medium GAPS</string>
    <string name="total_invest">Total Invest Needed</string>
    <string name="total_saving">Total Saving / Investment Capital</string>
    <string name="profit">Profit or Loss</string>
</resources>
